fix header buttons on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -91,3 +91,9 @@ canvas {
     width: 100%;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .header button {
+    margin-top: 1rem;
+  }
+}
